Docker配置变更: 使用自己的image, 同时安装vim

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
         "dockerfile": "../Dockerfile",
         "context": ".."
     },
+    "image": "compilers-env",
     "customizations": {
         "vscode": {
             "settings": {
