--- a/lab1/Code/Makefile
+++ b/lab1/Code/Makefile
@@ -34,7 +34,11 @@ syntax-c: $(YFILE)
 # 定义的一些伪目标
 .PHONY: clean test
 test:
+	@echo "-------------test1--------------"
 	./parser ../Test/test1.cmm
+	@echo "-------------test2--------------"
+	./parser ../Test/test2.cmm
+	@echo "-------------test---------------"
 clean:
 	rm -f parser lex.yy.c syntax.tab.c syntax.tab.h syntax.output
 	rm -f $(OBJS) $(OBJS:.o=.d)
