--- a/lab1/Code/Makefile
+++ b/lab1/Code/Makefile
@@ -33,11 +33,15 @@ syntax-c: $(YFILE)
 
 # 定义的一些伪目标
 .PHONY: clean test
-test:
-	@echo "-------------test1--------------"
-	./parser ../Test/test1.cmm
-	@echo "-------------test2--------------"
-	./parser ../Test/test2.cmm
+test: parser
+#	@echo "-------------test1--------------"
+#	./parser ../Test/test1.cmm
+# 	@echo "-------------test2--------------"
+# 	./parser ../Test/test2.cmm
+	@echo "-------------test3--------------"
+	./parser ../Test/test3.cmm
+	@echo "-------------test4--------------"
+	./parser ../Test/test4.cmm
 	@echo "-------------test--------------"
 clean:
 	rm -f parser lex.yy.c syntax.tab.c syntax.tab.h syntax.output
